--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Groupomania_P7/frontend/public/uploads/post/
+Groupomania_P7/frontend/public/uploads/profil/90a093d5-b6d5-4199-a3f4-85397d5a0908.jpg
